--- a/Twig.csproj
+++ b/Twig.csproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="mysql.data" Version="8.0.14" />
     <PackageReference Include="newtonsoft.json" Version="12.0.1" />
+    <PackageReference Include="RabbitMQ.client" Version="5.1.0" />
   </ItemGroup>
 
 </Project>
