--- a/Twig.csproj
+++ b/Twig.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="mysql.data" Version="8.0.14" />
     <PackageReference Include="newtonsoft.json" Version="12.0.1" />
+    <PackageReference Include="Npgsql" Version="4.0.5" />
     <PackageReference Include="RabbitMQ.client" Version="5.1.0" />
   </ItemGroup>
 
